Fixed static path in details.html

--- a/metrouchet/metrouchet_crm/templates/details.html
+++ b/metrouchet/metrouchet_crm/templates/details.html
@@ -127,7 +127,7 @@
 <!-- Подключение библиотеки django-formset-js -->
 {% load static %}
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="{% static 'js/jquery.formset.js' %}"></script>
+<script src="{% static 'metrouchet_crm/js/jquery.formset.js' %}"></script>
 
 <script>
     Fancybox.bind('[data-fancybox]', {
